# name-to-motif

./: .gitignore  CMakeLists.txt  README.md  build.sh  nametomotif.cc
